Add the hero image section style

--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,18 +1,18 @@
 @font-face{
     font-family:'AvenirNextLTPro-Regular';
-    src: url(../../assets/fonts/AvenirNextLTPro-Regular.otf),
-        url(../../assets/fonts/AvenirNextLTPro.ttf)
+    src: url(../assets/fonts/AvenirNextLTPro-Regular.otf),
+        url(../assets/fonts/AvenirNextLTPro.ttf)
 }
 @font-face{
     font-family:'AvenirNextLTPro-Demi';
-    src: url(../../assets/fonts/AvenirNextLTPro-Demi.otf)
-    url(../../assets/fonts/AvenirNextLTProDemi.ttf)
+    src: url(../assets/fonts/AvenirNextLTPro-Demi.otf),
+    url(../assets/fonts/AvenirNextLTProDemi.ttf)
 
 }
 @font-face{
     font-family:'AvenirNextLTPro-Bold';
-    src: url(../../assets/fonts/AvenirNextLTPro-Bold.otf)
-    url(../../assets/fonts/AvenirNextLTProBold.ttf)
+    src: url(../assets/fonts/AvenirNextLTPro-Bold.otf),
+    url(../assets/fonts/AvenirNextLTProBold.ttf)
 
 }
 
