--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -17,3 +17,11 @@
     @content;
   }
 }
+
+@mixin font-style($font-family, $font-size, $font-weight, $line-height, $color) {
+  font-family: $font-family;
+  font-size: $font-size;
+  font-weight: $font-weight;
+  line-height: $line-height;
+  color: $color;
+}
