--- a/styles/shows.css
+++ b/styles/shows.css
@@ -1,1 +1,112 @@
-/*# sourceMappingURL=shows.css.map */
+@font-face {
+  font-family: "AvenirNextLTPro-Regular";
+  src: url(../assets/fonts/AvenirNextLTPro-Regular.otf), url(../assets/fonts/AvenirNextLTPro.ttf);
+}
+@font-face {
+  font-family: "AvenirNextLTPro-Demi";
+  src: url(../assets/fonts/AvenirNextLTPro-Demi.otf), url(../assets/fonts/AvenirNextLTProDemi.ttf);
+}
+@font-face {
+  font-family: "AvenirNextLTPro-Bold";
+  src: url(../assets/fonts/AvenirNextLTPro-Bold.otf), url(../assets/fonts/AvenirNextLTProBold.ttf);
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header {
+  font-family: "AvenirNextLTPro-Demi";
+  background-color: #323232;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 6rem;
+  font-size: 1rem;
+  line-height: 1rem;
+}
+.header__nav {
+  display: flex;
+  justify-content: flex-start;
+}
+.header__logo {
+  align-self: center;
+  width: 120px;
+  height: 20px;
+}
+.header__list {
+  width: 320px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__item {
+  list-style: none;
+  color: #FFFFFF;
+  height: 2rem;
+  width: 100%;
+  text-align: center;
+}
+.header__item:hover {
+  color: #FFFFFF;
+}
+.header__item:active {
+  color: #FFFFFF;
+  font-family: "AvenirNextLTPro-Bold";
+  border-bottom: 4px solid #FFFFFF;
+}
+.header__link {
+  font-family: "AvenirNextLTPro-Regular";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #E1E1E1;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+.header__link:hover {
+  color: #cb2491;
+}
+
+.hero {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 20rem;
+  background-image: url(../assets/images/hero-shows.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.hero__overlay {
+  position: absolute;
+  background-color: #323232;
+  height: 100%;
+  width: 100%;
+  opacity: 0.5;
+}
+.hero__title {
+  z-index: 1;
+  font-family: "AvenirNextLTPro-Demi";
+  font-size: 26px;
+  font-weight: 600;
+  line-height: 32px;
+  color: #FFFFFF;
+  padding: 0 1rem;
+  width: 84%;
+}
+.hero__copy {
+  z-index: 1;
+  font-family: "AvenirNextLTPro-Regular";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #FFFFFF;
+  padding: 2rem 1rem;
+}/*# sourceMappingURL=shows.css.map */
