--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -1,6 +1,7 @@
 @use '../styles/partials/variables' as *;
 @use '../styles/partials/mixins' as *;
 @use '../styles/partials/typography';
+@use '../styles/partials/global' ;
 
 *{
   margin: 0;
@@ -12,61 +13,61 @@ a{
     text-decoration: none;
   }
 
-.header{
-    font-family: 'AvenirNextLTPro-Demi';
-    background-color:$bandsite-black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-    height:6rem;
-    font-size: 1rem;
-    line-height: 1rem;
+// .header{
+//     font-family: 'AvenirNextLTPro-Demi';
+//     background-color:$bandsite-black;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items:center;
+//     height:6rem;
+//     font-size: 1rem;
+//     line-height: 1rem;
 
-    &__nav{
-        display: flex;
-        justify-content: flex-start;
-    }
-    &__logo{
-        align-self: center;
-        width:120px;
-        height:20px;
-    }
-    &__list{
-        width:320px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+//     &__nav{
+//         display: flex;
+//         justify-content: flex-start;
+//     }
+//     &__logo{
+//         align-self: center;
+//         width:120px;
+//         height:20px;
+//     }
+//     &__list{
+//         width:320px;
+//         display: flex;
+//         justify-content: space-between;
+//         align-items: center;
+//     }
 
-    &__item{
-        list-style: none;
-        color:$white;
-        height:2rem;
-        width:100%;
-        text-align: center;
+//     &__item{
+//         list-style: none;
+//         color:$white;
+//         height:2rem;
+//         width:100%;
+//         text-align: center;
         
-        &:hover{
-          color: $white;
-        }
+//         &:hover{
+//           color: $white;
+//         }
   
-        &:active{
-          color:$white;
-          font-family: 'AvenirNextLTPro-Bold';
-          border-bottom: 4px solid $white;
-        }
-    }
+//         &:active{
+//           color:$white;
+//           font-family: 'AvenirNextLTPro-Bold';
+//           border-bottom: 4px solid $white;
+//         }
+//     }
 
-    &__link{
-        @include font-style('AvenirNextLTPro-Regular',16px,400,22px,$mercury);
-        margin-bottom:1rem;
-        margin-top:1rem;
+//     &__link{
+//         @include font-style('AvenirNextLTPro-Regular',16px,400,22px,$mercury);
+//         margin-bottom:1rem;
+//         margin-top:1rem;
   
-        &:hover{
-          color:$pink;
-        }
-    }
-}
+//         &:hover{
+//           color:$pink;
+//         }
+//     }
+// }
 .hero{
     position:relative;
     display: flex;
@@ -87,7 +88,7 @@ a{
       &__title{  
         z-index: 1;
         @include font-style('AvenirNextLTPro-Demi',26px,600,32px,$white);
-        padding: 0 1rem;
+        padding: 0 1rem 2rem 1rem;
         width:84%;
         
     }
@@ -96,4 +97,19 @@ a{
         @include font-style('AvenirNextLTPro-Regular',16px,400,22px,$white);
         padding: 2rem 1rem ;
     }
+    &__iframe{
+      z-index: 1;
+      padding:1rem;
+    }
 }
+
+.shows{
+  &__title{
+    @include font-style('AvenirNextLTPro-Bold',24px,700,32px,$bandsite-darkblack);
+    padding: 1rem;
+  }
+  &__label-date{
+    @include font-style('AvenirNextLTPro-Demi',10px,700,20px,$silver);
+
+  }
+  }
