--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -13,61 +13,6 @@ a{
     text-decoration: none;
   }
 
-// .header{
-//     font-family: 'AvenirNextLTPro-Demi';
-//     background-color:$bandsite-black;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items:center;
-//     height:6rem;
-//     font-size: 1rem;
-//     line-height: 1rem;
-
-//     &__nav{
-//         display: flex;
-//         justify-content: flex-start;
-//     }
-//     &__logo{
-//         align-self: center;
-//         width:120px;
-//         height:20px;
-//     }
-//     &__list{
-//         width:320px;
-//         display: flex;
-//         justify-content: space-between;
-//         align-items: center;
-//     }
-
-//     &__item{
-//         list-style: none;
-//         color:$white;
-//         height:2rem;
-//         width:100%;
-//         text-align: center;
-        
-//         &:hover{
-//           color: $white;
-//         }
-  
-//         &:active{
-//           color:$white;
-//           font-family: 'AvenirNextLTPro-Bold';
-//           border-bottom: 4px solid $white;
-//         }
-//     }
-
-//     &__link{
-//         @include font-style('AvenirNextLTPro-Regular',16px,400,22px,$mercury);
-//         margin-bottom:1rem;
-//         margin-top:1rem;
-  
-//         &:hover{
-//           color:$pink;
-//         }
-//     }
-// }
 .hero{
     position:relative;
     display: flex;
@@ -87,14 +32,14 @@ a{
 
       &__title{  
         z-index: 1;
-        @include font-style('AvenirNextLTPro-Demi',26px,600,32px,$white);
+        @include font-style('Avenir',26px,600,32px,$white);
         padding: 0 1rem 2rem 1rem;
         width:84%;
         
     }
     &__copy{
         z-index: 1;
-        @include font-style('AvenirNextLTPro-Regular',16px,400,22px,$white);
+        @include font-style('Avenir',16px,400,22px,$white);
         padding: 2rem 1rem ;
     }
     &__iframe{
@@ -104,12 +49,53 @@ a{
 }
 
 .shows{
+  display:flex;
+  flex-direction:column;
+
   &__title{
-    @include font-style('AvenirNextLTPro-Bold',24px,700,32px,$bandsite-darkblack);
+    @include font-style('Avenir',24px,700,32px,$bandsite-darkblack);
     padding: 1rem;
   }
   &__label-date{
-    @include font-style('AvenirNextLTPro-Demi',10px,700,20px,$silver);
+    @include font-style('Avenir',13px,600,20px,$silver);
+    padding: 1rem 1rem 0 1rem;
+  }
+  &__lable-venue{
+    @extend .shows__label-date;
+    padding: 0.5rem 1rem 0 1rem;
+  }
+  &__lable-location{
+    @extend .shows__label-date;
+    padding: 0.5rem 1rem 0 1rem;
+  }
 
+  &__date{
+    @include font-style('Avenir',16px,700,20px,$bandsite-darkblack);
+    padding:0.5rem 1rem 1rem 1rem;
+  }
+  &__venue{
+    @include font-style('Avenir',16px,400,20px,$bandsite-darkblack);
+    padding:0.5rem 1rem 1rem 1rem;
+  }
+  &__location{
+    @include font-style('Avenir',16px,400,20px,$bandsite-darkblack);
+    padding:0.5rem 1rem 0 1rem;
+  }
+  &__button{
+    margin:1rem;
+    border-radius: 4px;
+    height:40px;
+    background-color: $bandsite-black;
+    text-transform: uppercase;
+    @include font-style('Avenir',16px,600,20px,$white);
+
+    &:hover{
+      background-color: $bandsite-darkblack;
+    }
+
+  }
+  &__hrborder{
+    border-bottom:1px solid $mercury;
+    width:100%;
   }
   }
