--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -2,6 +2,14 @@
 @use './typography';
 @use './variables' as *;
 
+*{
+  font-family: 'Avenir',Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 .header{
     @include font-style('Avenir',1rem,600,1rem,$white);
     background-color:$bandsite-black;
