--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,7 +1,7 @@
 @use 'variables' as *;
 
 @mixin tablet {
-  @media (min-width: $tablet-breakpoint) and (max-width: 1280px) {
+  @media (min-width: $tablet-breakpoint) {
     @content;
   }
 }
