--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,5 +1,5 @@
 @font-face{
-    font-family:'Avenir',sans-serif;
+    font-family:'Avenir';
     src: url(../assets/fonts/AvenirNextLTPro-Regular.otf) format('opentype'),
         url(../assets/fonts/AvenirNextLTPro.ttf) format('truetype');
         font-weight :400;
@@ -7,7 +7,7 @@
         font-display:swap;
 }
 @font-face{
-    font-family:'Avenir',sans-serif;
+    font-family:'Avenir';
     src: url(../assets/fonts/AvenirNextLTPro-Demi.otf) format('opentype'),
     url(../assets/fonts/AvenirNextLTProDemi.ttf)  format('truetype');
     font-weight :600;
@@ -15,7 +15,7 @@
     font-display:swap;
 }
 @font-face{
-    font-family:'Avenir',sans-serif;
+    font-family:'Avenir';
     src: url(../assets/fonts/AvenirNextLTPro-Bold.otf) format('opentype'),
     url(../assets/fonts/AvenirNextLTProBold.ttf) format('truetype');
     font-weight :700;
