--- a/styles/shows.css
+++ b/styles/shows.css
@@ -1,24 +1,32 @@
 @font-face {
-  font-family: "Avenir", sans-serif;
+  font-family: "Avenir";
   src: url(../assets/fonts/AvenirNextLTPro-Regular.otf) format("opentype"), url(../assets/fonts/AvenirNextLTPro.ttf) format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Avenir", sans-serif;
+  font-family: "Avenir";
   src: url(../assets/fonts/AvenirNextLTPro-Demi.otf) format("opentype"), url(../assets/fonts/AvenirNextLTProDemi.ttf) format("truetype");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Avenir", sans-serif;
+  font-family: "Avenir";
   src: url(../assets/fonts/AvenirNextLTPro-Bold.otf) format("opentype"), url(../assets/fonts/AvenirNextLTProBold.ttf) format("truetype");
   font-weight: 700;
   font-style: bold;
   font-display: swap;
 }
+* {
+  font-family: "Avenir", Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 .header {
   font-family: "Avenir";
   font-size: 1rem;
@@ -32,7 +40,7 @@
   align-items: center;
   height: 6rem;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .header {
     flex-direction: row;
     justify-content: flex-start;
@@ -52,7 +60,7 @@
   display: flex;
   justify-content: flex-start;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .header__nav {
     height: 95%;
   }
@@ -95,7 +103,7 @@
   font-weight: 700;
   border-bottom: 4px solid #FFFFFF;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .header__item {
     height: 5.5rem;
     align-content: center;
@@ -140,7 +148,7 @@
   line-height: 32px;
   color: #FFFFFF;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__title {
     font-family: "Avenir";
     font-size: 36px;
@@ -166,7 +174,7 @@
   padding-left: 1rem;
   padding-right: 1rem;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__imgcontainer {
     align-items: center;
     width: 45%;
@@ -187,7 +195,7 @@
   color: #FFFFFF;
   padding: 1rem;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__parabold, .footer__para--contact, .footer__para--email {
     font-family: "Avenir";
     font-size: 14px;
@@ -212,7 +220,7 @@
   font-weight: 400;
   padding: 0 1rem 0 1rem;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__para--contact, .footer__para--email {
     padding: 0 2.25rem 0 0;
   }
@@ -225,7 +233,7 @@
 .footer__para--email {
   padding: 1rem;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__para--email {
     padding: 2.25rem 2.25rem 2.25rem 0;
   }
@@ -243,7 +251,7 @@
   padding: 1rem;
   width: 7.5rem;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__logo {
     width: 0;
     height: 0;
@@ -262,7 +270,7 @@
 .footer__logo1 {
   visibility: hidden;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__logo1 {
     visibility: visible;
     width: 7.5rem;
@@ -288,7 +296,7 @@
   color: #FFFFFF;
   padding: 1rem;
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__copyright {
     font-family: "Avenir";
     font-size: 14px;
@@ -308,7 +316,7 @@
     padding: 0 10rem 5rem 10rem;
   }
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__card1 {
     display: flex;
     padding: 2.5rem 2.25rem 2.25rem 2.25rem;
@@ -324,7 +332,7 @@
     padding: 2.5rem 10rem 1.25rem 10rem;
   }
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__cardcontainer {
     display: flex;
     flex-direction: row;
@@ -341,7 +349,7 @@
     gap: 4rem;
   }
 }
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) {
   .footer__card2 {
     display: flex;
     flex-direction: column;
