--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -22,6 +22,10 @@ a{
     background-size: cover;
     background-position: center;
 
+    @include tablet{
+      height:37rem;
+    }
+
     &__overlay{
         position:absolute;
         background-color: $bandsite-black;
@@ -35,26 +39,57 @@ a{
         @include font-style('Avenir',26px,600,32px,$white);
         padding: 0 1rem 2rem 1rem;
         width:84%;
+
+        @include tablet{
+          @include font-style('Avenir',60px,600,68px,$white);
+          padding:0 2rem;
+          // padding-bottom: 2rem;
+        }
         
     }
     &__copy{
         z-index: 1;
         @include font-style('Avenir',16px,400,22px,$white);
         padding: 2rem 1rem ;
+
+        @include tablet{
+          @include font-style('Avenir',24px,600,32px,$white);
+          padding:5rem 2rem;
+          padding-bottom: 2rem;
+        }
     }
     &__iframe{
       z-index: 1;
       padding:1rem;
+
+      @include tablet{
+        padding-left:2rem;
+        width:60%;
+        height:13rem;
+      }
     }
 }
 
 .shows{
   display:flex;
   flex-direction:column;
+  width:320px;
+
+  // @include tablet{
+  //   flex-direction: row;
+  // }
 
   &__title{
     @include font-style('Avenir',24px,700,32px,$bandsite-darkblack);
     padding: 1rem;
+
+    @include tablet{
+      padding:42px 36px;
+      @include font-style('Avenir',40px,700,44px,$bandsite-darkblack);
+    }
+  }
+  &__content{
+    width:320px;
   }
   &__label-date{
     @include font-style('Avenir',13px,600,20px,$silver);
@@ -85,6 +120,7 @@ a{
     margin:1rem;
     border-radius: 4px;
     height:40px;
+    width:100%;
     background-color: $bandsite-black;
     text-transform: uppercase;
     @include font-style('Avenir',16px,600,20px,$white);
