Style shows section in Tablet view

--- a/styles/shows.css
+++ b/styles/shows.css
@@ -451,6 +451,13 @@ a {
   flex-direction: column;
   width: 320px;
 }
+@media (min-width: 768px) {
+  .shows {
+    width: 100%;
+    padding: 0 36px;
+    padding-bottom: 36px;
+  }
+}
 .shows__title {
   font-family: "Avenir";
   font-size: 24px;
@@ -461,7 +468,7 @@ a {
 }
 @media (min-width: 768px) {
   .shows__title {
-    padding: 42px 36px;
+    padding: 42px 0;
     font-family: "Avenir";
     font-size: 40px;
     font-weight: 700;
@@ -469,22 +476,55 @@ a {
     color: #000000;
   }
 }
+@media (min-width: 768px) {
+  .shows__theader {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
 .shows__content {
   width: 320px;
+  padding-top: 16px;
+}
+@media (min-width: 768px) {
+  .shows__content {
+    width: 100%;
+    display: flex;
+    padding: 16px 0;
+    justify-content: space-between;
+  }
 }
 .shows__label-date, .shows__lable-location, .shows__lable-venue {
   font-family: "Avenir";
   font-size: 13px;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 20px;
   color: #AFAFAF;
   padding: 1rem 1rem 0 1rem;
 }
+@media (min-width: 768px) {
+  .shows__label-date, .shows__lable-location, .shows__lable-venue {
+    padding: 0;
+    width: 12rem;
+  }
+}
 .shows__lable-venue {
   padding: 0.5rem 1rem 0 1rem;
 }
+@media (min-width: 768px) {
+  .shows__lable-venue {
+    padding: 0;
+    width: 10rem;
+  }
+}
 .shows__lable-location {
   padding: 0.5rem 1rem 0 1rem;
+}
+@media (min-width: 768px) {
+  .shows__lable-location {
+    padding: 0;
+  }
 }
 .shows__date {
   font-family: "Avenir";
@@ -494,6 +534,14 @@ a {
   color: #000000;
   padding: 0.5rem 1rem 1rem 1rem;
 }
+@media (min-width: 768px) {
+  .shows__date {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    width: 10rem;
+  }
+}
 .shows__venue {
   font-family: "Avenir";
   font-size: 16px;
@@ -501,6 +549,14 @@ a {
   line-height: 20px;
   color: #000000;
   padding: 0.5rem 1rem 1rem 1rem;
+}
+@media (min-width: 768px) {
+  .shows__venue {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    width: 8rem;
+  }
 }
 .shows__location {
   font-family: "Avenir";
@@ -510,11 +566,18 @@ a {
   color: #000000;
   padding: 0.5rem 1rem 0 1rem;
 }
+@media (min-width: 768px) {
+  .shows__location {
+    display: flex;
+    align-items: center;
+    padding: 0;
+  }
+}
 .shows__button {
   margin: 1rem;
   border-radius: 4px;
   height: 40px;
-  width: 100%;
+  width: 90%;
   background-color: #323232;
   text-transform: uppercase;
   font-family: "Avenir";
@@ -525,6 +588,12 @@ a {
 }
 .shows__button:hover {
   background-color: #000000;
+}
+@media (min-width: 768px) {
+  .shows__button {
+    width: 27%;
+    margin: 0;
+  }
 }
 .shows__hrborder {
   border-bottom: 1px solid #E1E1E1;
