--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -9,6 +9,7 @@
   box-sizing: border-box;
   overflow-x: hidden;
 }
+
 a{
     text-decoration: none;
   }
@@ -25,9 +26,11 @@ a{
     @include tablet{
       height:37rem;
     }
+
     @include desktop{
       height:45rem;
     }
+
     &__overlay{
         position:absolute;
         background-color: $bandsite-black;
@@ -35,6 +38,7 @@ a{
         width:100%;
         opacity: 0.5;
       }
+
       &__desktop{
         @include desktop{
            display:flex;
@@ -50,7 +54,6 @@ a{
         @include tablet{
           @include font-style('Avenir',60px,600,68px,$white);
           padding:0 2rem;
-          // padding-bottom: 2rem;
         }
 
         @include desktop{
@@ -58,8 +61,8 @@ a{
           padding-left:9rem;
           width:53%;
         }
-        
     }
+
     &__copy{
         z-index: 1;
         @include font-style('Avenir',16px,400,22px,$white);
@@ -76,6 +79,7 @@ a{
           padding-bottom: 2rem;
         }
     }
+
     &__iframe{
       z-index: 1;
       padding:1rem;
@@ -95,22 +99,23 @@ a{
 .shows{
   display:flex;
   flex-direction:column;
-  width:320px;
+  width:20rem;
 
   @include tablet{
     width:100%;
-    padding: 0 36px;
-    padding-bottom: 36px;
+    padding: 0 2.25rem;
+    padding-bottom: 2.25rem;
   }
+
   @include desktop{
     width:100%;
-    padding-left: 144px;;
+    padding-left: 9rem;
     flex-direction: row;
   }
 
   &__divmain{
     @include desktop{
-      padding-top:42px;
+      padding-top:2.625rem;
       width:70%;
     }
   }
@@ -120,22 +125,23 @@ a{
     padding: 1rem;
 
     @include tablet{
-      padding:42px 0;
+      padding:2.625rem 0;
       @include font-style('Avenir',40px,700,44px,$bandsite-darkblack);
     }
+
     @include desktop{
       @include font-style('Avenir',40px,700,44px,$bandsite-darkblack);
       width:25%;
     }
   }
+
   &__theader{
     @include tablet{
       display:flex;
-      // gap:6rem;
-
       justify-content: flex-start;
       align-items: center;
     }
+
     @include desktop{
       display:flex;
       justify-content: flex-start;
@@ -144,29 +150,56 @@ a{
       padding-top: 1rem;
     }
   }
+  
   &__content{
-    width:320px;
-    padding-top: 16px;
+    width:20rem;
+    padding-top: 1rem;
 
     @include tablet{
       width:100%;
       display:flex;
-      padding:16px 0;
+      padding:1.5rem 1.125rem;
       justify-content: space-between;
+      &:focus{
+        background-color: $mercury;
+      }
+      &:hover{
+        background-color: $alabaster;
+      }
+      &:active{
+        background-color: $mercury;
+      }
+    }
+
+    @include desktop{
+      padding:1.5rem 1.125rem;
+      &:focus{
+        background-color: $mercury;
+      }
+      &:hover{
+        background-color: $alabaster;
+      }
+      &:active{
+        background-color: $mercury;
+      }
     }
   }
+
   &__label-date{
     @include font-style('Avenir',13px,700,20px,$silver);
     padding: 1rem 1rem 0 1rem;
 
     @include tablet{
       padding:0;
+      padding-left:1rem;
       width:12rem;
     }
+
     @include desktop{
       width:13rem;
     }
   }
+
   &__lable-venue{
     @extend .shows__label-date;
     padding: 0.5rem 1rem 0 1rem;
@@ -174,11 +207,12 @@ a{
       padding:0;
       width:10rem;
     }
+
     @include desktop{
       width:11rem;
     }
-   
   }
+
   &__lable-location{
     @extend .shows__label-date;
     padding: 0.5rem 1rem 0 1rem;
@@ -190,6 +224,7 @@ a{
   &__date{
     @include font-style('Avenir',16px,700,20px,$bandsite-darkblack);
     padding:0.5rem 1rem 1rem 1rem;
+
     @include tablet{
       padding:0;
       display:flex;
@@ -197,9 +232,11 @@ a{
       width:10rem;
     }
   }
+
   &__venue{
     @include font-style('Avenir',16px,400,20px,$bandsite-darkblack);
     padding:0.5rem 1rem 1rem 1rem;
+
     @include tablet{
       display:flex;
       align-items: center;
@@ -207,19 +244,22 @@ a{
       width:8rem;
     }
   }
+
   &__location{
     @include font-style('Avenir',16px,400,20px,$bandsite-darkblack);
     padding:0.5rem 1rem 0 1rem;
+
     @include tablet{
       display:flex;
       align-items: center;
       padding:0;
     }
   }
+
   &__button{
     margin:1rem;
     border-radius: 4px;
-    height:40px;
+    height:2.5rem;
     width:90%;
     background-color: $bandsite-black;
     text-transform: uppercase;
@@ -236,10 +276,10 @@ a{
 
     @include desktop{
       width:22%;
-      margin:1rem;
+      margin:0;
     }
-
   }
+
   &__hrborder{
     border-bottom:1px solid $mercury;
     width:100%;
