--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -99,7 +99,7 @@ a{
 .shows{
   display:flex;
   flex-direction:column;
-  width:20rem;
+  // width:20rem;
 
   @include tablet{
     width:100%;
@@ -152,7 +152,7 @@ a{
   }
   
   &__content{
-    width:20rem;
+    // width:20rem;
     padding-top: 1rem;
 
     @include tablet{
@@ -192,11 +192,11 @@ a{
     @include tablet{
       padding:0;
       padding-left:1rem;
-      width:12rem;
+      width:12.5rem;
     }
 
     @include desktop{
-      width:13rem;
+      width:14.5rem;
     }
   }
 
@@ -205,7 +205,7 @@ a{
     padding: 0.5rem 1rem 0 1rem;
     @include tablet{
       padding:0;
-      width:10rem;
+      width:9.5rem;
     }
 
     @include desktop{
